kustomize/routingservice/kustomize/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: fleet
  name: routingservice-np
spec:
  podSelector:
    matchLabels:
      project: routing
      app: routingservice
      role: fleet-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: fleet
        - podSelector:
            matchLabels:
              role: ingress
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: fleet
        - podSelector:
            matchLabels:
              role: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              project: fleet
        - podSelector:
            matchLabels:
              role: postgres
      ports:
        - protocol: TCP
          port: 5432
